--- a/DanonEcsBenchmarks/packages.config
+++ b/DanonEcsBenchmarks/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BenchmarkDotNet" version="0.13.2" targetFramework="net481" />
+  <package id="BenchmarkDotNet.Annotations" version="0.13.2" targetFramework="net481" />
   <package id="CommandLineParser" version="2.4.3" targetFramework="net481" />
   <package id="Iced" version="1.17.0" targetFramework="net481" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net481" />
@@ -19,7 +21,6 @@
   <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net481" />
   <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net481" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net481" />
-  <package id="NUnit" version="3.5.0" targetFramework="net45" />
   <package id="Perfolizer" version="0.2.1" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
   <package id="System.CodeDom" version="6.0.0" targetFramework="net481" />
